<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.bilqu</groupId>
	<artifactId>proj-training</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		
		<junit.version>5.4.1</junit.version>
		<log4j2.version>2.11.0</log4j2.version>
		<log4j2.version>2.11.0</log4j2.version>
		<log4j.version>1.2.17</log4j.version>
		<skipTests>true</skipTests>
	</properties>

	<modules>
		<module>bom</module>
		<module>java8</module>
		<module>spring-boot-ho</module>
		<module>design-pattern</module>
		<module>poi</module>
		<module>data_structure</module>
		<module>utils</module>	
		      
    </modules>


	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<release>11</release>
						<compilerArgs>--enable-preview</compilerArgs>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>



</project>
